--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -37,16 +37,18 @@ $primary: #2f80ed;
 :root.dark{
   --primary-color: #2f80ed;
   --dark-color: #ffffff;
-  --light-color: #000;
+  --light-color: #333333;
   --dark-accent: #15202b;
+  --white: #ffffff;
+  --dark: #555555;
   --border-shadow: 0 0 4px rgba(255, 255, 255, 0.35);
   --main-font: "Source Sans Pro", sans-serif;
-  --header-bg: #000;
-  --bg-white: #000;
+  --header-bg: #333333;
+  --bg-white: #333333;
   --txt-dark: #ffffff;
   --active-link: #2f80ed;
   --body-bg: #444;
-  --card-bg: #000;
+  --card-bg: #333333;
   --footer-bg: #333333;
   --footer-txt-color: #f2f2f2;
 }
